resources/screen-common.less
/* ... */
.toctogglespan {
	float: right;
}

/* Remove brackets around the show/hide button of the TOC
The selectors have a higher specifity than in core */
body :not( :checked ) > .toctogglespan:before,
body :not( :checked ) > .toctogglespan:after {
	content: '';
}

.toctogglelabel {
	padding-left: 0; /* Overwrite label { padding-left: 0.5em; } from forms.less */
	margin-left: 0.5em; /* Create new distance to the TOC title without increasing the focus ring */
}

.toclevel-1 {
	margin-bottom: 0.25em;
}

.tocnumber {
	color: @base20;
}

.skin-gongbi .mw-body .oo-ui-tagMultiselectWidget-handle,
.skin-gongbi .mw-body .oo-ui-capsuleMultiselectWidget-handle {
	margin: 0; /* wat */
}

.mw-body .mw-rcfilters-ui-changesListWrapperWidget .mw-changeslist-legend, /* wat */
.mw-changeslist-legend,
.mw-body .mw-search-profile-tabs,
.mw-body fieldset#mw-searchoptions,
.mw_metadata,
.wikitable,
.mw-datatable {
	color: @text;
	background: @base90;
}

.mw-body .mw-search-profile-tabs {
	padding: 0.5em;
}

.mw_metadata,
.mw-datatable,
.wikitable {
	display: block;
	overflow-x: auto;
	border-color: @base70;
	background: @base90;
	border-width: 1.125px;

	> tr > th,
	> tr > td,
	> * > tr > th,
	> * > tr > td {
		border: 1px solid @base70;
		padding: 0.4em 0.5em;
	}
}

.mw-datatable th {
	background: @blue-bright;
}

.mw_metadata th,
.wikitable th {
	background: @base90;
}

.mw_metadata {
	border-bottom-width: 3px;
}

/* Portlets */
.emptyPortlet,
#mw-page-header-links .emptyPortlet {
	display: none;
}

#p-lang.emptyPortlet {
	display: inherit;
}

/* Hidden stuff */

#p-namespaces h3,
#p-views h3,
#p-more h3,
#p-search h3 {
	.hidden;
}

// Categories on bottom of page
#catlinks-sidebar {
	.nav-block();
}

#catlinks {
	.nav-block();
	padding: 1.25em 2.5em;

	&:before {
		content: '';
		display: block;
		border-top: solid 0.5px @base80;
		padding: 0.5em 0;
	}

	li {
		padding: 0.25em 0.5em;
		border-left: 0;
	}

	div {
		margin: 0 0 0.35em;
	}

	div:last-of-type {
		margin: 0;
	}

	.catlinks-allhidden {
		display: none;
	}
}

